changing buttons arround

--- a/index.html
+++ b/index.html
@@ -15,10 +15,12 @@
       </div>
       <div class="right-section">
         <img src="./img/blue_birds_wall.jpg" alt="picture of two bluejays">
-        <a href="https://www.google.com" class="button main-btn" id="main-btn-0">Tastemakers</a>
-        <a href="https://www.google.com" class="button main-btn" id="main-btn-1">Blog</a>
-        <a href="https://www.google.com" class="button main-btn" id="main-btn-2">The A-List</a>
-        <a href="https://www.google.com" class="button main-btn" id="main-btn-3">Contribute</a>
+        <div>
+          <a href="https://www.google.com" class="button main-btn" id="main-btn-0">Tastemakers</a>
+          <a href="https://www.google.com" class="button main-btn" id="main-btn-1">Blog</a>
+          <a href="https://www.google.com" class="button main-btn" id="main-btn-2">The A-List</a>
+          <a href="https://www.google.com" class="button main-btn" id="main-btn-3">Contribute</a>
+        </div>
       </div>
 
     </div>
