--- a/index.html
+++ b/index.html
@@ -14,22 +14,35 @@
         <p> something 3 </p>
       </div>
       <div class="right-section">
-        <img src="./img/blue_birds_wall.jpg" alt="picture of two bluejays">
+        <img class="main-img" src="./img/blue_birds_wall.jpg" alt="picture of two bluejays">
         <div>
           <a href="https://www.google.com" class="button main-btn" id="main-btn-0">Tastemakers</a>
           <a href="https://www.google.com" class="button main-btn" id="main-btn-1">Blog</a>
           <a href="https://www.google.com" class="button main-btn" id="main-btn-2">The A-List</a>
           <a href="https://www.google.com" class="button main-btn" id="main-btn-3">Contribute</a>
         </div>
+        <div>
+
+          <hr class="dashed-hr top-dashed-hr">
+            <div class="row">
+              <img id="email-section-1" class="email-section icon" src="./icons/email/email-freepik.png" alt="picture of an email icon">
+            
+              <p id="email-section-2" class="email-section"><i>Sign up for our newsletter to recieve handpicked selection of the best cooked birds delievered straight to your door with our cats.</i></p>
+          
+            </div>
+          <hr class="dashed-hr bottom-dashed-hr">
+        </div>
       </div>
 
     </div>
 
+  
     <div class="footer">
 
-    <hr> 
+    <hr id="bottom-hr"> 
 
     <a href='http://www.freepik.com/free-vector/colors-social-buttons-set_840848.htm'>bird &amp; social media icons designed by freepik</a>
+    <a href='http://www.freepik.com/free-vector/communication-icons_760438.htm'>email icon Designed by Freepik</a>
   
     </div>
   </body>
