added a .nvmrc file and set it to v5.9.0 and attempted to figure out how to do email section

--- a/index.html
+++ b/index.html
@@ -28,7 +28,10 @@
               <img id="email-section-1" class="email-section icon" src="./icons/email/email-freepik.png" alt="picture of an email icon">
             
               <p id="email-section-2" class="email-section"><i>Sign up for our newsletter to recieve handpicked selection of the best cooked birds delievered straight to your door with our cats.</i></p>
-          
+              <form id="email-section-form" action="MAILTO:nobody@nobody.com">
+                <input type="text" class="email-section" id="email-section-3" name="mail" value="Email">
+                <input type="submit" class="email-section" id="email-section-4" value="Subscribe">
+              </form>
             </div>
           <hr class="dashed-hr bottom-dashed-hr">
         </div>
