--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
         </div>
         <div>
 
-          <hr class="dashed-hr top-dashed-hr">
-            <div class="row">
+            <div class="row border">
               <img id="email-section-1" class="email-section icon" src="./icons/email/email-freepik.png" alt="picture of an email icon">
             
               <p id="email-section-2" class="email-section"><i>Sign up for our newsletter to recieve handpicked selection of the best cooked birds delievered straight to your door with our cats.</i></p>
@@ -33,7 +32,6 @@
                 <input type="submit" class="email-section" id="email-section-4" value="Subscribe">
               </form>
             </div>
-          <hr class="dashed-hr bottom-dashed-hr">
         </div>
       </div>
 
