--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title> Engage Game Project </title>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-rc1/jquery.min.js"></script>
         
+        <link href='https://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'>
     </head>
     <body>
 <!--
@@ -11,7 +12,7 @@
         <button type="button" onclick="console.log('asoii');">click</button>
         <script src="bundle.js"></script>
 -->
-        <script src="bundle.js"></script>
+        <script src="app.js"></script>
         
     </body>
 </html>
