--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <button type="button" onclick="console.log('asoii');">click</button>
         <script src="bundle.js"></script>
 -->
-        <script src="app.js"></script>
+        <script src="bundle.js"></script>
         
     </body>
 </html>
